--- a/app/src/main/res/layout/activity_dashboard_main_screen.xml
+++ b/app/src/main/res/layout/activity_dashboard_main_screen.xml
@@ -59,7 +59,7 @@
                         android:layout_gravity="center"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
-                        android:text="Coolant"
+                        android:text="Coolant Temp"
                         android:textSize="24sp"
                         android:textStyle="bold"/>
 
