--- a/app/src/main/res/layout/activity_environmental.xml
+++ b/app/src/main/res/layout/activity_environmental.xml
@@ -47,7 +47,7 @@
                     android:layout_gravity="center"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:text="Alternator 2"
+                    android:text="Cabin Humidity"
                     android:textSize="24sp"
                     android:textStyle="bold"/>
 
@@ -78,7 +78,7 @@
                     android:layout_gravity="center"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:text="Battery 1"
+                    android:text="Outside Temp"
                     android:textSize="24sp"
                     android:textStyle="bold"/>
 
@@ -98,7 +98,7 @@
                     android:layout_gravity="center"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:text="Battery 2"
+                    android:text="Outside Humidity"
                     android:textSize="24sp"
                     android:textStyle="bold"/>
 
@@ -111,6 +111,8 @@
             <!-- this is the end of that gauge -->
 
         </LinearLayout> <!-- this is the end of the 2nd row -->
+
+
 
     </LinearLayout>
 </ScrollView>
