Example accelerometer tutorial

--- a/app/src/main/res/menu/activity_main_drawer.xml
+++ b/app/src/main/res/menu/activity_main_drawer.xml
@@ -37,4 +37,8 @@
         android:id="@+id/nav_information"
         android:title="Information"/>
 
+    <item
+        android:id="@+id/nav_test_mph"
+        android:title="Accelerometer MPH Test"/>
+
 </menu>
